fix list so it can be used easily with breakpoints ( vertical on mobile, row on desktop for example ), add letter spacig mixin to type

--- a/scss/components/_list.scss
+++ b/scss/components/_list.scss
@@ -4,6 +4,10 @@
     display: -ms-flexbox;
     display: flex;
     gap: $gap;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
 }
